fix JDK limits for tests