@@ -212,7 +212,11 @@ subprojects {
 
         def libraries = ""
         if (Os.isFamily(Os.FAMILY_MAC)) {
-            libraries = "${file("../grobid-home/lib/mac-64").absolutePath}"
+            if (Os.OS_ARCH.equals("aarch64")) {
+                libraries = "${file("../grobid-home/lib/mac_arm-64").absolutePath}"
+            } else {
+                libraries = "${file("../grobid-home/lib/mac-64").absolutePath}"
+            }
         } else if (Os.isFamily(Os.FAMILY_UNIX)) {
             libraries = "${file("../grobid-home/lib/lin-64/jep").absolutePath}:" +
                 "${file("../grobid-home/lib/lin-64").absolutePath}:"
@@ -221,6 +225,8 @@ subprojects {
         }
 
         //workingDir = rootProject.rootDir
+        jvmArgs "--add-opens", "java.base/java.util.stream=ALL-UNNAMED", 
+            "--add-opens", "java.base/java.io=ALL-UNNAMED"
         systemProperty "java.library.path","${System.getProperty('java.library.path')}:" + libraries
     }
 
